--- a/Task-1/portfolio.css
+++ b/Task-1/portfolio.css
@@ -38,6 +38,7 @@ nav {
     color: white;
     font-weight: bold;
 }
+
 .container {
     display: flex;
     justify-content: space-between;
@@ -129,8 +130,6 @@ button:hover {
     gap: 5px;
 }
 .About {
-    width: 100%;
-    height: 1000px;
     background-color: black;
     display: flex;
     flex-direction: column;
@@ -153,14 +152,12 @@ button:hover {
     padding-bottom: 80px;
 }
 .about-child {
-    margin-top: 100px ;
-    width: 100%;
-    height: 100%;
     display: flex;
-    gap: 200px;
+    justify-content: space-evenly;
+    align-items: center;
     flex-direction: row;
-    padding-left: 100px;
-    padding-right: 10px;
+    flex-wrap: wrap;
+    margin: 20px auto;
 }
 .left2 {
     height: 300px;
@@ -168,7 +165,7 @@ button:hover {
     border-radius: 10px;
     overflow: hidden;
     transition: 0.5s;
-    margin-bottom: 40px;
+   
 }
 .right2 {
     height: 200px;
@@ -193,7 +190,6 @@ button:hover {
 }
 .projects {
      width: 100%;
-    height: 900px;
     background-color: black;
     padding-top:50px ;
 }
@@ -205,6 +201,12 @@ button:hover {
     margin-left: 20px;
     margin-right: 20px;
 }
+@media (max-width:1100px) {
+    .upper-data {
+        height: fit-content;
+        flex-direction: column;
+    }
+}
 #lower {
     height: 400px;
     width: 100%;
@@ -214,10 +216,19 @@ button:hover {
     display: flex;
     justify-content: space-evenly;
 }
+.vertical-line {
+    background-color: #ffffff; 
+    width: 1px; 
+    height: 100px;
+}
 .horizontal {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    width: 90%; 
+    height: 50px;
+    background-color: black;
+    border-bottom: 5px solid white;
 }
 .timeline {
     width: 100%;
@@ -236,7 +247,6 @@ button:hover {
 }
 .cards {
     width: 100%;
-    height: 600px;
     
 }
 .card-row{
@@ -380,14 +390,10 @@ footer {
         padding-left: 7%;
         padding-bottom: 70px;
     }
-    .About{
-        height: 1100px;
-    }
     .about-child {
         flex-direction: column;
         padding: 0;
-        margin: 0;
-        height:1000px;
+        margin: 20px auto;
         justify-content: space-evenly;
         align-items: center;
         gap: 10px;
